[gd_scene load_steps=51 format=3 uid="uid://pf3xrpprsaqb"]

[ext_resource type="Script" path="res://GDScript/player.gd" id="1_43exw"]
[ext_resource type="Texture2D" uid="uid://dyskxm10q2fxt" path="res://assets/knight.png" id="2_fc42i"]
[ext_resource type="Texture2D" uid="uid://deks4myh1l8gc" path="res://assets/Smear 01 Vertical 01.png" id="3_ltsm5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xbdm2"]
atlas = ExtResource("2_fc42i")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aq23"]
atlas = ExtResource("2_fc42i")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4y05"]
atlas = ExtResource("2_fc42i")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otbbk"]
atlas = ExtResource("2_fc42i")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d66o"]
atlas = ExtResource("2_fc42i")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4xsg"]
atlas = ExtResource("2_fc42i")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4y0d"]
atlas = ExtResource("2_fc42i")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1su1"]
atlas = ExtResource("2_fc42i")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4tb6"]
atlas = ExtResource("2_fc42i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x47vg"]
atlas = ExtResource("2_fc42i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtf8x"]
atlas = ExtResource("2_fc42i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eifnb"]
atlas = ExtResource("2_fc42i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edenc"]
atlas = ExtResource("2_fc42i")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2ba8"]
atlas = ExtResource("2_fc42i")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0ly8"]
atlas = ExtResource("2_fc42i")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifsj3"]
atlas = ExtResource("2_fc42i")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgqnn"]
atlas = ExtResource("2_fc42i")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rrdq"]
atlas = ExtResource("2_fc42i")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi3vf"]
atlas = ExtResource("2_fc42i")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08v3y"]
atlas = ExtResource("2_fc42i")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g1i1"]
atlas = ExtResource("2_fc42i")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iffgd"]
atlas = ExtResource("2_fc42i")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8jr"]
atlas = ExtResource("2_fc42i")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyv4q"]
atlas = ExtResource("2_fc42i")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yt2s"]
atlas = ExtResource("2_fc42i")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ge2n"]
atlas = ExtResource("2_fc42i")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5wpx"]
atlas = ExtResource("2_fc42i")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uam3n"]
atlas = ExtResource("2_fc42i")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjkma"]
atlas = ExtResource("2_fc42i")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ran25"]
atlas = ExtResource("2_fc42i")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcvkp"]
atlas = ExtResource("2_fc42i")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tab6e"]
atlas = ExtResource("2_fc42i")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3d4v"]
atlas = ExtResource("2_fc42i")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_44qe3"]
atlas = ExtResource("2_fc42i")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_danpj"]
atlas = ExtResource("2_fc42i")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr1is"]
atlas = ExtResource("2_fc42i")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2nxl"]
atlas = ExtResource("2_fc42i")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikdkn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbdm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aq23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4y05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otbbk")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d66o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4xsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4y0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1su1")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4tb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x47vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtf8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eifnb")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_edenc")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2ba8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0ly8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifsj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgqnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rrdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi3vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08v3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g1i1")
}],
"loop": false,
"name": &"roll",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iffgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyv4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yt2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ge2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5wpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uam3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjkma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ran25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcvkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tab6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3d4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44qe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_danpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr1is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2nxl")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4gnlg"]
atlas = ExtResource("3_ltsm5")
region = Rect2(0, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxv8r"]
atlas = ExtResource("3_ltsm5")
region = Rect2(48, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_op146"]
atlas = ExtResource("3_ltsm5")
region = Rect2(96, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgdas"]
atlas = ExtResource("3_ltsm5")
region = Rect2(144, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6bnh"]
atlas = ExtResource("3_ltsm5")
region = Rect2(192, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a56gn"]
atlas = ExtResource("3_ltsm5")
region = Rect2(240, 16, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_44hsi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gnlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxv8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op146")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgdas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6bnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a56gn")
}],
"loop": false,
"name": &"hit",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydtcj"]
size = Vector2(42, 16.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxj8l"]
size = Vector2(11, 15)

[node name="Player1" type="CharacterBody2D" groups=["players"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_43exw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ikdkn")
animation = &"roll"
frame = 7
frame_progress = 1.0

[node name="HitSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(15, 5)
sprite_frames = SubResource("SpriteFrames_44hsi")
animation = &"hit"
frame = 5
frame_progress = 0.342198

[node name="AttackHitbox" type="Area2D" parent="HitSprite"]
position = Vector2(0, 3)
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitSprite/AttackHitbox"]
position = Vector2(2, -2.875)
shape = SubResource("RectangleShape2D_ydtcj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_dxj8l")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="HitSprite" to="." method="_on_hit_sprite_animation_finished"]
[connection signal="body_entered" from="HitSprite/AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
